# akquant-lwc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
src/akquant_lwc/: __init__.py  _app_js.py  _normalize.py  _patch.py  _sections.py  _tables.py  _template.py  report.py  server.py
tests/: test_report.py
